<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="?android:selectableItemBackground">

    <TextView
        android:id="@+id/textView_repo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        tools:text="@string/user_name"
        android:gravity="start"
        android:layout_gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#000000"
        android:textSize="18sp" />

  <TextView
      android:id="@+id/textView_repo_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      tools:text="@string/description"
      android:gravity="start"
      android:layout_gravity="center_vertical"
      android:textAppearance="?attr/textAppearanceListItem"
      android:textColor="#000000"
      android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView_fork"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          android:layout_marginRight="8dp"
          tools:text="@string/forks" />
      <TextView
          android:id="@+id/textView_num_of_fork"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          android:layout_marginRight="16dp"
          tools:text="0" />

      <TextView
          android:id="@+id/textView_license"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          android:layout_marginRight="8dp"
          tools:text="@string/license" />

      <TextView
          android:id="@+id/textView_license_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000" />

    </LinearLayout>


  </LinearLayout>


