<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="?android:selectableItemBackground">

  <ImageView
      android:id="@+id/imageView_user_avatar"
      android:layout_gravity="center"
      android:layout_width="60dp"
      android:layout_height="64dp"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="10dp"
      app:srcCompat="@android:drawable/ic_menu_slideshow" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <TextView
        android:id="@+id/textView_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:text="@string/user_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textView_repos"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="8dp"
          android:textColor="#000000"
          tools:text="@string/repositories" />
      <TextView
          android:id="@+id/textView_num_of_repos"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          android:layout_marginRight="16dp"
          tools:text="0" />

      <TextView
          android:id="@+id/textView_followers"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          android:layout_marginRight="8dp"
          tools:text="@string/followers" />

      <TextView
          android:id="@+id/textView_num_of_followers"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textColor="#000000"
          tools:text="0" />

    </LinearLayout>


  </LinearLayout>

</LinearLayout>


